--- a/packages/hof_express_app/Resources/Private/Templates/Food/Show.html
+++ b/packages/hof_express_app/Resources/Private/Templates/Food/Show.html
@@ -13,10 +13,29 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <h1>Single View for Food</h1>
+<!--    <h1>Single View for Food</h1>-->
 
-    <f:flashMessages />
-    <f:render partial="Food/Properties" arguments="{food:food}" />
+<!--    <f:flashMessages />-->
+<!--    <f:render partial="Food/Properties" arguments="{food:food}" />-->
+    <h4>{food.name} <em> ({food.foodType.name})</em></h4>
+    <div class="row mb-3">
+        <div class="col-3">
+            <f:image src="{food.image.originalResource.publicUrl}" width="200"/>
+
+        </div>
+        <div class="col-6">
+            <p>
+                <f:format.nl2br>{food.description}</f:format.nl2br>
+            </p>
+        </div>
+        <div class="col-3">
+            <p>Price: <strong>{food.price->f:format.currency(thousandsSeparator: '.', currencySign: '$')}</strong></p>
+            <div><input type="number" min="1" name="quantity" class="form-control-sm" value="1" required style="margin-bottom: 10px; width: 28%"></div>
+            <div><a role="button" class="btn btn-outline-dark" style="margin-bottom: 10px; color: #000;">Add To Cart</a></div>
+            <div><a role="button" class="btn btn-dark" style="margin-bottom: 10px; color: #fff;"> Buy Now</a></div>
+
+        </div>
+    </div>
     <f:link.action action="list">Back to list</f:link.action><br />
     <f:link.action action="new">New Food</f:link.action>
 </f:section>
