--- a/packages/hof_express_app/Resources/Private/Templates/Restaurant/Show.html
+++ b/packages/hof_express_app/Resources/Private/Templates/Restaurant/Show.html
@@ -13,7 +13,8 @@ in /Configuration/ExtensionBuilder/settings.yaml:
 Otherwise your changes will be overwritten the next time you save the extension in the extension builder
 
 <f:section name="content">
-    <section class="parallax-window" data-parallax="scroll" data-image-src="{restaurant.coverImage.originalResource.publicUrl}" data-natural-width="1400" data-natural-height="470">
+    <section class="parallax-window rr" data-parallax="scroll" data-image-src="{restaurant.coverImage.originalResource.publicUrl}" data-natural-width="1400" data-natural-height="470"
+             style = "">
         <div id="subheader">
             <div id="sub_content">
                 <div id="thumb"><f:image src="{restaurant.image.originalResource.publicUrl}" /></div>
