--- a/packages/restaurant/Resources/Public/Css/style.css
+++ b/packages/restaurant/Resources/Public/Css/style.css
@@ -62,7 +62,7 @@ h3 .slide_typo strong {font-family:"Helvetica Neue", Helvetica, Arial, sans-seri
 .slide_typo_2{color:#fff; font-size:18px; white-space:nowrap}
 
 .box_style_2 h2.inner {
-    background-color:#78cfcf;
+    background-color:#000000;
     color:#fff;
     margin:-25px -25px 25px -25px;
     padding:12px 15px;
@@ -300,7 +300,7 @@ header{
     z-index:99999;
 }
 header.sticky{
-    background-color: #78cfcf;
+    background-color: #000000;
     -webkit-box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.41);
     -moz-box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
     box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
@@ -1261,7 +1261,7 @@ ul.opening_list li span{
     position: relative;
     padding: 11% 100px 10% 100px;
     height: 400px;
-    background-color: #78cfcf;
+    background-color: #000000;
     color:#fff;
     font-size:16px;
 }
@@ -1317,7 +1317,7 @@ ul.opening_list li span{
     width:100%;
     height:100%;
     bottom:0;
-    background-color:#78cfcf;
+    background-color:#000000;
     z-index:999999;
 }
 .sk-spinner-wave.sk-spinner {
@@ -1560,7 +1560,7 @@ select.form-control.form-white{
     position: relative;
     padding:1px 30px 10px 30px;
     text-align: center;
-    background: #78cfcf;
+    background: #000000;
     border-radius: 0px;
     border:none;
 }
@@ -2080,7 +2080,7 @@ a.bt_filters{
 
 /*4.4 Map listing */
 header#map_listing_header{
-    background-color: #78cfcf;
+    background-color: #000000;
     position:fixed;
     -webkit-box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.41);
     -moz-box-shadow:0px 2px 10px -2px rgba(0, 0, 0, 0.41);
@@ -2714,4 +2714,31 @@ ul.plan-features {
 
 #c9.frame.frame-default.frame-type-list.frame-layout-0.frame-background-none.frame-no-backgroundimage.frame-space-before-none.frame-space-after-none{
     padding-top: 0px;
+}
+
+.rr{
+    background: url("../Images/img/restaurant.jpg");
+}
+
+.bg-dark, .card-panel-dark .card-header, .navbar-inverse, .navbar-inverse-transition, .navbar-inverse-transition.navbar-transition {
+
+    background-color:
+
+        #000 !important;
+
+}
+.bg-dark, .card-panel-dark .card-header, .navbar-inverse, .navbar-inverse-transition, .navbar-inverse-transition.navbar-transition {
+
+    background-color:
+
+        #000 !important;
+
+}
+
+.nav-item{
+    font-size: 16px;
+}
+
+.nn{
+    background: url("../Images/img/restaurant.jpg");
 }
