--- a/packages/hof_express_app/Resources/Private/Templates/Restaurant/Show.html
+++ b/packages/hof_express_app/Resources/Private/Templates/Restaurant/Show.html
@@ -84,8 +84,15 @@ Otherwise your changes will be overwritten the next time you save the extension 
                                 <strong>{food.price->f:format.currency(thousandsSeparator: '.', currencySign: '€')}</strong>
                             </td>
                             <td class="options">
+                                <f:security.ifAuthenticated>
+                                    <f:then>
+                                        <a href="#" class="" aria-expanded="true"><i class="icon_plus_alt2"></i></a>
+                                    </f:then>
+                                    <f:else>
+                                       Login To Order
+                                    </f:else>
+                                </f:security.ifAuthenticated>
 
-                                <a href="#" class="" aria-expanded="true"><i class="icon_plus_alt2"></i></a>
 
                             </td>
                         </tr>
