--- a/packages/hof_express_app/Resources/Private/Templates/Restaurant/Show.html
+++ b/packages/hof_express_app/Resources/Private/Templates/Restaurant/Show.html
@@ -86,7 +86,10 @@ Otherwise your changes will be overwritten the next time you save the extension 
                             <td class="options">
                                 <f:security.ifAuthenticated>
                                     <f:then>
-                                        <a href="#" class="" aria-expanded="true"><i class="icon_plus_alt2"></i></a>
+                                        <f:link.action action="add" controller="Cart" pluginName="Cart" pageUid="13"  arguments="{food: food}" class="">
+                                            <i class="icon_plus_alt2"></i>
+                                        </f:link.action>
+
                                     </f:then>
                                     <f:else>
                                        Login To Order
